[package]
name = "pct-diff"
version = "0.1.0"
edition = "2024"

[dependencies]
gdal = "0.19"
geo = "0.29"
geojson = "0.24"
rstar = "0.12"
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
rayon = "1"
indicatif = "0.17"
